--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -1,25 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-</body>
+{{extends "./layouts/layout.jet.html"}}
+{{block css()}}
 
-<script>
-    let socket = null; // declare it so we can use it on other javascript functions on the page
+{{end}}
 
-    // wait until the document is loaded and then connect to the websocket
-    document.addEventListener("DOMContentLoaded", function() {
-        socket = new WebSocket("ws://127.0.0.1:8080/ws")
+{{block body()}}
+<div class="row justify-content-center mt-5">
+    <div class="col-lg-6">
+        <form method="POST" action="/"
+            class='form-group border rounded shadow bg-primary font-weight-bold p-4 needs-validation'>
+            <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+            <h2 class='mb-4 text-center text-light text-primary'>Go Websockets Chat Room</h2>
 
-        socket.onopen = () => {
-            console.log("Sucessfully connected!")
-        }
-    })
-</script>
-</html>
+            <h4 class='text-center text-light mb-3'>Log In</h4>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-user fa-fw"></i></span>
+                    <input class="form-control required" id="username" required autocomplete="off" type='username'
+                        name='username' placeholder='username' value=''>
+                    <div class="invalid-feedback">
+                        Please enter a valid email address
+                    </div>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-lock fa-fw"></i></span>
+                    <input class="form-control required" id="password" required autocomplete="off" type='password'
+                        name='password' placeholder='password' value=''>
+                    <div class="invalid-feedback">
+                        Please enter a valid email address
+                    </div>
+                </div>
+            </div>
+
+            <div class="clearfix remember">
+
+                <button type='submit' class='btn btn-light btn-shadow mt-3'>Login</button>
+
+                <div class='text-center mt-2'>
+                    <h6 class='mr-2 text-light'>Need to Create an Account?</h6>
+                    <h5>Register Here!</h5>
+                </div>
+        </form>
+    </div>
+</div>
+{{end}}
+
+{{block js()}}
+
+{{end}}
