--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -1,12 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
-<body>
-    <h1>Register</h1>
-</body>
-</html>
+{{extends "./layouts/layout.jet.html"}}
+{{block css()}}
+
+{{end}}
+{{block body()}}
+<div class="row justify-content-center mt-5">
+    <div class="col-lg-6">
+        <form class='form-group border rounded shadow bg-primary font-weight-bold p-4'>
+            <h4 class='text-center text-light mb-4'>Register</h4>
+            <small class='text-light'>* All fields are required</small>
+
+            <div class="mb-3 mt-1">
+                <div class="input-group">
+                    <input class="form-control required" id="username" required autocomplete="off" type='text'
+                        name='username' placeholder='username' value=''>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <input class="form-control required" id="first_name" required autocomplete="off" type='text'
+                        name='first_name' placeholder='first name' value=''>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <input class="form-control required" id="last_name" required autocomplete="off" type='text'
+                        name='last_name' placeholder='last name' value=''>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <input class="form-control required" id="email" required autocomplete="off" type='email'
+                        name='email' placeholder='email@email.com' value=''>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <input class="form-control required" id="password" required autocomplete="off" type='password'
+                        name='password' placeholder='password' value=''>
+                </div>
+            </div>
+            <small class='text-light'>* Password should be greater than 10 characters and have at least one
+                letter and number.</small>
+
+            <div class='d-flex flex-column'>
+                <button type='submit' class='btn btn-light btn-shadow align-items-end mt-5'>Register</button>
+            </div>
+            <div class='text-center mt-4'>
+                <small class='mr-2 text-light'>Already Have An Account?</small>
+                <small class="text-light">Login!</small>
+            </div>
+        </form>
+    </div>
+</div>
+{{end}}
+
+{{block js()}}
+
+{{end}}
