--- a/views/layouts/layout.jet.html
+++ b/views/layouts/layout.jet.html
@@ -45,7 +45,7 @@
         function errorMessage(msg) {
             notie.alert({
                 type: 'error',
-                text: msg,
+                text: msg
             })
         }
     </script>
