added database test file

--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -30,7 +30,7 @@
                     <input class="form-control required" id="password" required autocomplete="off" type='password'
                         name='password' placeholder='password' value=''>
                     <div class="invalid-feedback">
-                        Please enter a valid email address
+                        Please enter a valid password
                     </div>
                 </div>
             </div>
