--- a/views/chat.jet.html
+++ b/views/chat.jet.html
@@ -18,7 +18,7 @@
     <div class="col">
         <div class="d-flex align-items-center justify-content-between">
             <h1 class='mt-3 text-primary'>Go Websockets Chat Room</h1>
-            <button class='btn btn-primary'>Log Out</button>
+            <a href="/" class='btn btn-primary'>Log Out</a>
         </div>
         <hr>
     </div>
@@ -68,7 +68,7 @@
 
 
 {{block js()}}
-<script src="/static/reconnecting-websocket.min.js"></script>
+<!-- <script src="/static/reconnecting-websocket.min.js"></script> -->
 <script>
     let socket = null; // declare it so we can use it on other javascript functions on the page
     let output = document.getElementById("output")
@@ -84,10 +84,10 @@
 
     // wait until the document is loaded and then connect to the websocket
     document.addEventListener("DOMContentLoaded", function () {
-        socket = new ReconnectingWebSocket("ws://127.0.0.1:8080/ws", null, {
-            debug: true, // SET TO FALSE IN PRODUCTION  
-            reconnectInterval: 3000 // 3 sec
-        })
+        // socket = new WebSocket("ws://127.0.0.1:8080/ws", null, {
+        //     debug: true, // SET TO FALSE IN PRODUCTION  
+        //     reconnectInterval: 3000 // 3 sec
+        // })
         socket = new WebSocket("ws://127.0.0.1:8080/ws")
 
         socket.onopen = () => {
