--- a/views/layouts/layout.jet.html
+++ b/views/layouts/layout.jet.html
@@ -1,4 +1,3 @@
-{{define "base"}}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,17 +23,13 @@
     </style>
 
     <!-- page level css -->
-    {{block "css" .}}
-
-    {{end}}
+    {{yield css()}}
 </head>
 
 <body>
     <div class="container">
 
-        {{block "content" .}}
-
-        {{end}}
+        {{yield body()}}
 
     </div>
 
@@ -47,18 +42,16 @@
     <script src="https://cdn.jsdelivr.net/npm/notie@4.3.1/dist/notie.min.js"></script>
 
     <script>
-        function notify(msg, msgType) {
+        function errorMessage(msg) {
             notie.alert({
-                text: msg,
-                type: msgType, // "error" and "success"
+                type: 'error',
+                text: msg
             })
         }
     </script>
 
     <!-- page level js -->
-    {{block "js" .}}
-
-    {{end}}
+    {{yield js()}}
 </body>
 
 </html>
