--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -5,7 +5,7 @@
 {{block body()}}
 <div class="row justify-content-center mt-5">
     <div class="col-lg-6">
-        <form method="POST" action="" class='border rounded shadow bg-primary font-weight-bold p-4 needs-validation'
+        <form method="POST" action="" class='border rounded shadow bg-primary font-weight-bold p-4 '
             novalidate>
             <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
             <h4 class='text-center text-light mb-4'>Register</h4>
@@ -29,6 +29,9 @@
             <div class="form-group mb-3">
                 <input class="form-control" id="email" required autocomplete="off" type='email' name='email'
                     placeholder='email@email.com' value='{{ user.Email }}' />
+                <div class="invalid-feedback">
+                    Please enter a valid email address
+                </div>
             </div>
 
             <div class="form-group mb-3">
@@ -46,7 +49,7 @@
                 <small class="text-light">Login!</small>
             </div>
 
-            
+
         </form>
     </div>
 </div>
