--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -3,47 +3,52 @@
 
 {{end}}
 {{block body()}}
-        <div class="row justify-content-center mt-5">
-            <div class="col-lg-6">
-                <form method="POST" action="/"
-                    class='form-group border rounded shadow bg-primary font-weight-bold p-4 needs-validation'
-                    novalidate>
-                    <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-                    <h2 class='mb-4 text-center text-light text-primary'>Go Websockets Chat Room</h2>
+<div class="row justify-content-center mt-5">
+    <div class="col-lg-6">
+        <form method="POST" action="/"
+            class='form-group border rounded shadow bg-primary font-weight-bold p-4 needs-validation' novalidate>
+            <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+            <h2 class='mb-4 text-center text-light text-primary'>Go Websockets Chat Room</h2>
 
-                    <h4 class='text-center text-light mb-3'>Log In</h4>
+            <h4 class='text-center text-light mb-3'>Log In</h4>
 
-                    <div class="mb-3">
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="fas fa-user fa-fw"></i></span>
-                            <input class="form-control required" id="username" required autocomplete="off"
-                                type='username' name='username' placeholder='username' value=''>
-                        </div>
+            <div class="mb-3">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-user fa-fw"></i></span>
+                    <input class="form-control required" id="username" required autocomplete="off" type='username'
+                        name='username' placeholder='username' value=''>
+                    <div class="invalid-feedback">
+                        Please enter a valid username
                     </div>
-
-                    <div class="mb-3">
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="fas fa-lock fa-fw"></i></span>
-                            <input class="form-control required" id="password" required autocomplete="off"
-                                type='password' name='password' placeholder='password' value=''>
-                        </div>
-                    </div>
-
-                    <div class="clearfix remember">
-
-                        <button type='submit' id="sendBTN" class='btn btn-light btn-shadow mt-3'>Login</button>
-
-                        <div class='text-center mt-2'>
-                            <h6 class='mr-2 text-light'>Need to Create an Account?</h6>
-                            <h5>Register Here!</h5>
-                        </div>
-                </form>
+                </div>
             </div>
-        </div>
+
+            <div class="mb-3">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-lock fa-fw"></i></span>
+                    <input class="form-control required" id="password" required autocomplete="off" type='password'
+                        name='password' placeholder='password' value=''>
+                    <div class="invalid-feedback">
+                        Please enter a value
+                    </div>
+                </div>
+            </div>
+
+            <div class="clearfix remember">
+
+                <button type='submit' id="sendBTN" class='btn btn-light btn-shadow mt-3'>Login</button>
+
+                <div class='text-center mt-2'>
+                    <h6 class='mr-2 text-light'>Need to Create an Account?</h6>
+                    <h5>Register Here!</h5>
+                </div>
+        </form>
     </div>
+</div>
+</div>
 
-    {{end}}
+{{end}}
 
-    {{block js()}}
-    
-    {{end}}
+{{block js()}}
+
+{{end}}
