--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -5,7 +5,7 @@
 {{block body()}}
 <div class="row justify-content-center mt-5">
     <div class="col-lg-6">
-        <form method="POST" action="" class='border rounded shadow bg-primary font-weight-bold p-4 '
+        <form method="POST" action="/register" class='border rounded shadow bg-primary font-weight-bold p-4 needs-validation'
             novalidate>
             <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
             <h4 class='text-center text-light mb-4'>Register</h4>
@@ -14,16 +14,25 @@
             <div class="form-group mb-3 mt-1">
                 <input class="form-control" id="username" autocomplete="off" type='text' name='username'
                     placeholder='username' value='{{ user.Username }}' required />
+                    <div class="invalid-feedback">
+                        Please enter a username
+                    </div>
             </div>
 
             <div class="form-group mb-3">
                 <input class="form-control" id="first_name" required autocomplete="off" type='text' name='first_name'
                     placeholder='first name' value='{{ user.FirstName }}' />
+                    <div class="invalid-feedback">
+                        Please enter a first name
+                    </div>
             </div>
 
             <div class="form-group mb-3">
                 <input class="form-control" id="last_name" required autocomplete="off" type='text' name='last_name'
                     placeholder='last name' value='{{ user.LastName }}' />
+                    <div class="invalid-feedback">
+                        Please enter a last name
+                    </div>
             </div>
 
             <div class="form-group mb-3">
@@ -37,6 +46,9 @@
             <div class="form-group mb-3">
                 <input class="form-control" id="password" required autocomplete="off" type='password' name='password'
                     placeholder='password' value='{{ user.Password }}' />
+                    <div class="invalid-feedback">
+                        Please enter a password
+                    </div>
             </div>
             <small class='text-light'>* Password should be greater than 8 characters and have at least one
                 letter and number.</small>
