added GetUserById to Register handler

--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -42,6 +42,10 @@
                     <h6 class='mr-2 text-light'>Need to Create an Account?</h6>
                     <h5>Register Here!</h5>
                 </div>
+                <div class='text-center mt-2'>
+                    <h6 class='mr-2 text-light'>Forgot Password?</h6>
+                    <h5>Click Here!</h5>
+                </div>
         </form>
     </div>
 </div>
