--- a/views/chat.jet.html
+++ b/views/chat.jet.html
@@ -18,7 +18,7 @@
     <div class="col">
         <div class="d-flex align-items-center justify-content-between">
             <h1 class='mt-3 text-primary'>Go Websockets Chat Room</h1>
-            <a href="/" class='btn btn-primary'>Log Out</a>
+            <a href="/logout" class='btn btn-primary'>Log Out</a>
         </div>
         <hr>
     </div>
