--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -15,10 +15,10 @@
             <div class="mb-3">
                 <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-user fa-fw"></i></span>
-                    <input class="form-control required" id="username" required autocomplete="off" type='username'
-                        name='username' placeholder='username' value=''>
+                    <input class="form-control required" id="email" required autocomplete="off" type='email'
+                        name='email' placeholder='email' value=''>
                     <div class="invalid-feedback">
-                        Please enter a valid username
+                        Please enter a valid email
                     </div>
                 </div>
             </div>
