--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -50,7 +50,7 @@
             </div>
             <div class='text-center mt-4'>
                 <small class='mr-2 text-light'>Already Have An Account?</small>
-                <small class="text-light">Login!</small>
+                <a href="/"><h6>Log In!</h6></a>
             </div>
 
 
