added password regex validation

--- a/views/chat.jet.html
+++ b/views/chat.jet.html
@@ -143,7 +143,7 @@
                     return false
                 }
                 if ((userField.value === "") || (messageField.value === "")) {
-                    errorMessage("fill out username and message")
+                    errorMessage("fill out username and message fields")
                     return false
                 } else {
                     sendMessage()
