--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -5,31 +5,31 @@
 {{block body()}}
 <div class="row justify-content-center mt-5">
     <div class="col-lg-6">
-        <form method="POST" action="/register" class='border rounded shadow bg-primary font-weight-bold p-4 needs-validation'
-            novalidate>
+        <form method="POST" action="/register"
+            class='border rounded shadow bg-primary font-weight-bold p-4 needs-validation' novalidate>
             <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
             <h4 class='text-center text-light mb-4'>Register</h4>
-            <small class='text-light'>* All fields are required</small>
+            <small class='text-light'>All fields are required</small>
 
-            <div class="form-group mb-3">
+            <div class="form-group my-3">
                 <input class="form-control" id="first_name" required autocomplete="off" type='text' name='first_name'
-                    placeholder='first name' value='{{ user.FirstName }}' />
-                    <div class="invalid-feedback">
-                        Please enter a first name
-                    </div>
+                    placeholder='first name' />
+                <div class="invalid-feedback">
+                    Please enter a first name
+                </div>
             </div>
 
             <div class="form-group mb-3">
                 <input class="form-control" id="last_name" required autocomplete="off" type='text' name='last_name'
-                    placeholder='last name' value='{{ user.LastName }}' />
-                    <div class="invalid-feedback">
-                        Please enter a last name
-                    </div>
+                    placeholder='last name' />
+                <div class="invalid-feedback">
+                    Please enter a last name
+                </div>
             </div>
 
             <div class="form-group mb-3">
                 <input class="form-control" id="email" required autocomplete="off" type='email' name='email'
-                    placeholder='email@email.com' value='{{ user.Email }}' />
+                    placeholder='email@email.com'/>
                 <div class="invalid-feedback">
                     Please enter a valid email address
                 </div>
@@ -37,20 +37,20 @@
 
             <div class="form-group mb-3">
                 <input class="form-control" id="password" required autocomplete="off" type='password' name='password'
-                    placeholder='password' value='{{ user.Password }}' />
-                    <div class="invalid-feedback">
-                        Please enter a password
-                    </div>
+                    placeholder='password' pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" />
+                <div class="invalid-feedback">
+                    Please enter a valid password
+                </div>
             </div>
-            <small class='text-light'>* Password should be greater than 8 characters and have at least one
-                letter and number.</small>
+            <small class='text-light'>Password must contain at least one number, one uppercase letter, and at least 8 characters</small>
 
-            <div class='d-flex flex-column'>
-                <button type='submit' class='btn btn-light btn-shadow align-items-end mt-5'>Register</button>
-            </div>
-            <div class='text-center mt-4'>
+            <button type='submit' class='btn btn-light btn-shadow mt-3'>Register</button>
+
+            <div class='text-center mt-2'>
                 <small class='mr-2 text-light'>Already Have An Account?</small>
-                <a href="/"><h6>Log In!</h6></a>
+                <a href="/">
+                    <h6>Log In!</h6>
+                </a>
             </div>
 
 
