--- a/views/layouts/layout.jet.html
+++ b/views/layouts/layout.jet.html
@@ -35,7 +35,7 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/notie@4.3.1/dist/notie.min.js"></script>
-    <!-- <script src="/static/admin/js/attention.js"></script> -->
+    <script src="/static/admin/js/attention.js"></script>
     <script>
         function errorMessage(msg) {
             notie.alert({
@@ -43,19 +43,7 @@
                 text: msg
             })
         }
-        // let attention = Prompt();
-
-        // {{if .Flash != ""}}
-        // successAlert('{{.Flash}}')
-        // {{end}}
-
-        // {{if .Warning != ""}}
-        // warningAlert('{{.Warning}}')
-        // {{end}}
-
-        // {{if .Error != ""}}
-        // errorAlert('{{.Error}}')
-        // {{end}}
+        
 
         (function () {
             'use strict';
