--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -36,7 +36,7 @@
 
             <div class="clearfix remember">
 
-                <button type='submit' id="sendBTN" class='btn btn-light btn-shadow mt-3'>Login</button>
+                <button type='submit' class='btn btn-light btn-shadow mt-3'>Login</button>
 
                 <div class='text-center mt-2'>
                     <small class='text-light'>Need to Create an Account?</small>
