--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -49,7 +49,7 @@
             <div class='text-center mt-2'>
                 <small class='mr-2 text-light'>Already Have An Account?</small>
                 <a href="/">
-                    <h6>Log In!</h6>
+                    <h6 class='text-light'>Log In!</h6>
                 </a>
             </div>
 
