--- a/views/login.jet.html
+++ b/views/login.jet.html
@@ -40,7 +40,7 @@
 
                 <div class='text-center mt-2'>
                     <small class='text-light'>Need to Create an Account?</small>
-                    <a href="/register"><h6>Register Here!</h6></a>
+                    <a href="/register"><h6 class='text-light'>Register Here!</h6></a>
                 </div>
         </form>
     </div>
