--- a/views/chat.jet.html
+++ b/views/chat.jet.html
@@ -83,7 +83,9 @@
 
     // wait until the document is loaded and then connect to the websocket
     document.addEventListener("DOMContentLoaded", function () {
-        socket = new WebSocket("ws://" + document.location.host + "/ws")
+        // socket = new WebSocket("ws://" + document.location.host + "/ws")
+        socket = new WebSocket("wss://go-websocket.herokuapp.com/ws")
+
 
         socket.onopen = () => {
             console.log("Sucessfully connected!")
